# vcopy

./: COMMANDS.md  Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: install.sh  package-release.sh
src/: clipboard.rs  config.rs  main.rs  service.rs  setup.rs  storage.rs  watcher.rs
src/i18n/: en.rs  es.rs  mod.rs  pt.rs  strings.rs
src/ui/: app.rs  draw.rs  event.rs  mod.rs
