[package]
name = "vcopy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vcopy"
path = "src/main.rs"

[dependencies]
arboard = "3"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
toml = "0.8"
png = "0.18"
image = { version = "0.25", default-features = false, features = ["png"] }
